--- a/home.html
+++ b/home.html
@@ -43,16 +43,16 @@
                                 <label class="label">
                                     <span class="label-text">Amount</span>
                                 </label>
-                                <input type="text" placeholder="Amount" class="input input-bordered" required />
+                                <input type="text" id="input-add-money" placeholder="Amount" class="input input-bordered" required />
                             </div>
                             <div class="form-control">
                                 <label class="label">
                                     <span class="label-text">Pin</span>
                                 </label>
-                                <input type="password" placeholder="password" class="input input-bordered" required autocomplete="off" required />
+                                <input id="input-pin-number" type="password" placeholder="Pin Number" class="input input-bordered" required autocomplete="off" required />
                             </div>
                             <div class="form-control mt-6">
-                                <button class="btn btn-primary">Add Money</button>
+                                <button id="btn-add-money" class="btn btn-primary">Add Money</button>
                             </div>
                         </form>
                     </div>
