--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                     <div>
                         <div class="stats shadow">
                             <div class="stat">
-                                <div class="stat-value">89,400</div>
+                                <div id="available-money" class="stat-value">9400</div>
                                 <div class="stat-desc">Available Balance</div>
                             </div>
                         </div>
@@ -61,7 +61,8 @@
             </div>
         </div>
     </main>
-    <script src="/home.js"></script>
+    <!-- <script src="/home.js"></script> -->
+     <script src="/addMoney.js"></script>
 </body>
 
 </html>
