--- a/home.html
+++ b/home.html
@@ -37,19 +37,21 @@
                     <div class="divider"></div>
 
                     <!-- add money from start -->
-                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
                             <div class="form-control">
                                 <label class="label">
                                     <span class="label-text">Amount</span>
                                 </label>
-                                <input type="text" id="input-add-money" placeholder="Amount" class="input input-bordered" required />
+                                <input type="text" id="input-add-money" placeholder="Amount"
+                                    class="input input-bordered" required />
                             </div>
                             <div class="form-control">
                                 <label class="label">
                                     <span class="label-text">Pin</span>
                                 </label>
-                                <input id="input-pin-number" type="password" placeholder="Pin Number" class="input input-bordered" required autocomplete="off" required />
+                                <input id="input-pin-number" type="password" placeholder="Pin Number"
+                                    class="input input-bordered" required autocomplete="off" required />
                             </div>
                             <div class="form-control mt-6">
                                 <button id="btn-add-money" class="btn btn-primary">Add Money</button>
@@ -57,12 +59,36 @@
                         </form>
                     </div>
                     <!-- add money from end -->
+
+                    <!-- cash out start -->
+                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                        <form class="card-body">
+                            <div class="form-control">
+                                <label class="label">
+                                    <span class="label-text">Amount</span>
+                                </label>
+                                <input type="text" id="input-add-money" placeholder="Amount"
+                                    class="input input-bordered" required />
+                            </div>
+                            <div class="form-control">
+                                <label class="label">
+                                    <span class="label-text">Pin</span>
+                                </label>
+                                <input id="input-pin-number" type="password" placeholder="Pin Number"
+                                    class="input input-bordered" required autocomplete="off" required />
+                            </div>
+                            <div class="form-control mt-6">
+                                <button id="btn-add-money" class="btn btn-primary">Cash Out</button>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- cash out end -->
                 </div>
             </div>
         </div>
     </main>
     <!-- <script src="/home.js"></script> -->
-     <script src="/addMoney.js"></script>
+    <script src="/addMoney.js"></script>
 </body>
 
 </html>
