--- a/home.html
+++ b/home.html
@@ -67,18 +67,18 @@
                                 <label class="label">
                                     <span class="label-text">Amount</span>
                                 </label>
-                                <input type="text" id="input-add-money" placeholder="Amount"
+                                <input type="text" id="input-cash-out-money" placeholder="Amount"
                                     class="input input-bordered" required />
                             </div>
                             <div class="form-control">
                                 <label class="label">
                                     <span class="label-text">Pin</span>
                                 </label>
-                                <input id="input-pin-number" type="password" placeholder="Pin Number"
+                                <input id="pin-number" type="password" placeholder="Pin Number"
                                     class="input input-bordered" required autocomplete="off" required />
                             </div>
                             <div class="form-control mt-6">
-                                <button id="btn-add-money" class="btn btn-primary">Cash Out</button>
+                                <button id="cash-out" class="btn btn-primary">Cash Out</button>
                             </div>
                         </form>
                     </div>
@@ -89,6 +89,7 @@
     </main>
     <!-- <script src="/home.js"></script> -->
     <script src="/addMoney.js"></script>
+    <script src="/cashOut.js"></script>
 </body>
 
 </html>
