--- a/home.html
+++ b/home.html
@@ -30,14 +30,14 @@
 
                     <!-- user action buttons -->
                     <div>
-                        <button class="btn btn-lg">Add Money</button>
-                        <button class="btn btn-lg">Cash Out</button>
+                        <button id="add-money" class="btn btn-lg">Add Money</button>
+                        <button id="cash-out-money" class="btn btn-lg">Cash Out</button>
                     </div>
 
                     <div class="divider"></div>
 
                     <!-- add money from start -->
-                    <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div id="cash-in-section" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
                             <div class="form-control">
                                 <label class="label">
@@ -61,7 +61,7 @@
                     <!-- add money from end -->
 
                     <!-- cash out start -->
-                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div id="cash-out-section" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
                             <div class="form-control">
                                 <label class="label">
